popup order summary dsktp

--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -317,6 +317,11 @@
   }
 }
 
+.datepicker_fancybox {
+  position: fixed;
+  z-index: 100000;
+}
+
 // Стрелочка сверху над блоком
 
 .datepicker--pointer {
