--- a/app/blocks/form-panel/form-panel.scss
+++ b/app/blocks/form-panel/form-panel.scss
@@ -78,6 +78,14 @@
     }
   }
 
+  &_pd42 {
+    padding: 19px 42px;
+
+    @include screen('sm') {
+      padding: 14px 18px;
+    }
+  }
+
   &.is-always-fixed {
     position: fixed;
     bottom: 0;
