--- a/app/components/popup-order-summary/popup-order-summary.scss
+++ b/app/components/popup-order-summary/popup-order-summary.scss
@@ -3,9 +3,36 @@
 
   .popup {
 
+    &__close {
+      top: 13px;
+      right: 16px;
+      width: 38px;
+      height: 38px;
+    }
+
     &__header {
       padding-top: 50px;
       padding-bottom: 28px;
+    }
+
+    &__content {
+      padding: 132px 0 80px;
+
+      @include screen('md') {
+        padding: 90px 0 80px;
+      }
+
+      @include screen('sm') {
+        padding: 70px 0 50px;
+      }
+    }
+  }
+
+  &__form {
+    padding: 0 73px 44px 70px;
+
+    @include screen('sm') {
+
     }
   }
 }
