--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -53,6 +53,7 @@ include ../blocks/indicator/indicator
 include ../blocks/info-editable/info-editable
 include ../blocks/info-price/info-price
 include ../blocks/info-slide/info-slide
+include ../blocks/info-tooltip/info-tooltip
 include ../blocks/info/info
 include ../blocks/informer/informer
 include ../blocks/link/link
