--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -81,8 +81,8 @@ block popups
   +popup-document-mobile(getData('contract-status-stage3.json'))#popup-legal-formalities-m3
   +popup-document-mobile(getData('contract-status-stage2.json'))#popup-legal-formalities-m2
   +popup-order-summary#popup-order-host
-    +form-order-summary(true)
+    +form-order-summary(true).__form
   +popup-order-summary-mobile#popup-order-mobile-host
   +popup-order-summary-g#popup-order-guest
-    +form-order-summary
+    +form-order-summary.__form
   +popup-order-summary-mobile-g#popup-order-mobile-guest
