--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -842,7 +842,7 @@ block content
         p Блок: blocks/tooltip/tooltip
       +ui-section-content()
         +ui-description .js-tooltip
-        +button('button')(title="Пример подсказки Пример подсказки Пример подсказки Пример подсказки Пример подсказки Пример подсказки Пример подсказки Пример подсказки").js-tooltip Пример подсказки
+        +button('button')(title="Пример подсказки").js-tooltip Пример подсказки
 
     //- Карты
     +ui-section
@@ -2773,7 +2773,14 @@ block content
         +short-info('Status')._taright
           +state()._right._check._bold._fz17 Signed waiting for Host
 
-
+    //- info-tooltip
+    +ui-section
+      +ui-section-head
+        h2 info-tooltip
+        p Блок: block/info-tooltip
+      +ui-section-content
+        +ui-description .info-tooltip
+        +info-tooltip.js-tooltip(title="In the absence of claims, the deposit is returned to the lessee in full at the end of the rental period.")
 block panels
   +main-menu
 
