--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -153,6 +153,8 @@ $color-chat-message: #f04734;
 $color-profile-post: #86909c;
 $color-profile-name: #535965;
 $color-border-state: #3d4552;
+$color-tooltip: #5bb2d6;
+$color-form-arrow: #a1abb8;
 
 // ##########
 // Transitions
