--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -455,6 +455,14 @@
       }
     }
 
+    &_small3 {
+      @include screen('sm') {
+        @include text12;
+
+        line-height: 1.25;
+      }
+    }
+
     &_big {
       @include text16;
 
@@ -709,6 +717,13 @@
       margin-top: -10px;
     }
 
+    &_absolute {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+    }
+
     &.is-fixed {
       position: fixed;
       bottom: 0;
@@ -815,6 +830,71 @@
 
     &_mt {
       margin-top: 13px;
+    }
+  }
+
+  &__line {
+    &:not(:last-child) {
+      margin-bottom: 9px;
+
+      @include screen('sm') {
+        margin-bottom: 5px;
+      }
+    }
+  }
+
+  &__dates {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    @include screen('sm') {
+      position: relative;
+    }
+
+    #{$b} {
+
+      &__line {
+        flex: 1;
+
+        @include screen('sm') {
+          flex: none;
+          width: 100%;
+        }
+
+        &:not(:last-child) {
+          margin-bottom: 0;
+
+          @include screen('sm') {
+            margin-bottom: 5px;
+          }
+        }
+      }
+    }
+
+    &-icon {
+      display: block;
+      width: 15px;
+      height: 15px;
+      min-width: 15px;
+      margin: 0 30px;
+
+      @include screen('sm') {
+        position: absolute;
+        right: 0;
+        top: 50%;
+        transform: translate3d(0, -50%, 0);
+        width: 7px;
+        height: 7px;
+      }
+    }
+
+    &-arrow {
+      width: 100%;
+      height: 100%;
+      fill: $color-form-arrow;
+      transform-origin: 50% 50% 0;
+      transform: rotate(-90deg);
     }
   }
 
