--- a/app/blocks/info-editable/info-editable.scss
+++ b/app/blocks/info-editable/info-editable.scss
@@ -1,3 +1,124 @@
 .info-editable {
   $b: &;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  flex-wrap: wrap;
+  border-bottom: 1px solid $color-border-light;
+  box-sizing: border-box;
+  padding-bottom: 11px;
+
+  &__name {
+    @include text-big;
+
+    display: inline-block;
+    white-space: nowrap;
+    font-weight: 700;
+
+    @include screen('sm') {
+      @include text;
+
+      line-height: (26/14);
+      letter-spacing: 0.01em;
+    }
+
+    &:not(:last-child) {
+      margin-right: 20px;
+    }
+  }
+
+  &__offer {
+
+    .box {
+      min-width: 13px;
+      width: 13px;
+      height: 13px;
+
+      @include screen('sm') {
+        display: none;
+      }
+    }
+
+    .offer-info {
+
+      &__title {
+        @include text-big;
+
+        font-weight: 400;
+        color: $color-basic;
+
+        @include screen('sm') {
+          @include text;
+
+          line-height: (26 / 14);
+          letter-spacing: .01em;
+        }
+      }
+    }
+  }
+
+  &__field {
+    display: inline-flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-left: auto;
+
+    &_date {
+      position: relative;
+    }
+
+    &_editpd {
+      padding-right: 56px;
+
+      @include screen('sm') {
+        padding-right: 40px;
+      }
+    }
+  }
+
+  &__text {
+    @include text-big;
+
+    @include screen('sm') {
+      @include text;
+
+      line-height: (26 / 14);
+      letter-spacing: .01em;
+    }
+
+    &_bold {
+      font-weight: 700;
+    }
+  }
+
+  &__info {
+    margin-left: 5px;
+
+    @include screen('sm') {
+      margin-left: 3px;
+      display: none;
+    }
+  }
+
+  &__edit {
+    margin-left: 27px;
+
+    @include screen('sm') {
+      margin-left: 10px;
+    }
+  }
+
+  &__date {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+    background-color: transparent;
+    z-index: 2;
+    opacity: 0;
+    cursor: pointer;
+  }
 }
