--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -416,6 +416,38 @@
     }
   }
 
+  &_mob-smallest {
+    @include screen('sm') {
+      @include text12;
+
+      line-height: (26 / 12);
+      border-radius: 15px;
+
+      #{$b}__text {
+        padding: 2px 27px 3px;
+      }
+    }
+
+    &#{$b}_border {
+      @include screen('sm') {
+        padding: 2px;
+      }
+
+      &::before {
+        @include screen('sm') {
+          border-radius: 15px;
+        }
+      }
+
+      #{$b}__text {
+        @include screen('sm') {
+          padding: 1px 19px 2px;
+          border-radius: 15px;
+        }
+      }
+    }
+  }
+
   &_border {
     &_small {
       #{$b}__text {
