--- a/app/blocks/form-panel/form-panel.scss
+++ b/app/blocks/form-panel/form-panel.scss
@@ -23,6 +23,14 @@
 
       @include text15;
     }
+
+    &_mfz12 {
+      @include screen('sm') {
+        @include text12;
+
+        line-height: (26 / 12);
+      }
+    }
   }
 
   &__links {
