--- a/app/components/form-order-summary/form-order-summary.scss
+++ b/app/components/form-order-summary/form-order-summary.scss
@@ -12,7 +12,7 @@
       margin-top: 82px;
 
       @include screen('sm') {
-        margin-top: 35px;
+        margin-top: 48px;
       }
 
     }
@@ -25,8 +25,22 @@
       margin-top: 74px;
 
       @include screen('sm') {
-        margin-top: 35px;
+        margin-top: 42px;
       }
+    }
+  }
+
+  &__scrollblock {
+    width: 100%;
+  }
+
+  &__inner-content {
+    @include screen('md') {
+      padding: 28px 36px 44px;
+    }
+
+    @include screen('sm') {
+      padding: 28px 19px 36px;
     }
   }
 
@@ -37,7 +51,24 @@
         margin-top: -8px;
 
         @include screen('sm') {
-          margin-top: -4px;
+          margin-top: 14px;
+        }
+      }
+    }
+  }
+
+  &_mobile {
+    display: flex;
+
+    .form-panel {
+
+      &__button {
+
+        .button__text {
+          @include screen('sm') {
+            padding-left: 34px;
+            padding-right: 34px;
+          }
         }
       }
     }
