--- a/app/components/popup-order-summary/popup-order-summary.pug
+++ b/app/components/popup-order-summary/popup-order-summary.pug
@@ -10,13 +10,11 @@ mixin popup-order-summary()
 
 
 mixin popup-order-summary-mobile()
-  +popup-mobile.popup-order-summary__&attributes(attributes)
+  +popup-mobile._white.popup-order-summary__&attributes(attributes)
     +popup-header.popup__header_white
       +popup-title Order Summary
     +popup-content
-      div.popup__scrollblock.js-scrollbar
-        +e.inner-content
-          block
+      block
 
 mixin popup-order-summary-g()
   +popup._big.popup-order-summary__&attributes(attributes)
@@ -30,10 +28,8 @@ mixin popup-order-summary-g()
 
 
 mixin popup-order-summary-mobile-g()
-  +popup-mobile.popup-order-summary__&attributes(attributes)
+  +popup-mobile._white.popup-order-summary__&attributes(attributes)
     +popup-header.popup__header_white
       +popup-title Order Summary
     +popup-content
-      div.popup__scrollblock.js-scrollbar
-        +e.inner-content
-          block
+      block
