--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -83,6 +83,8 @@ block popups
   +popup-order-summary#popup-order-host
     +form-order-summary(true).__form
   +popup-order-summary-mobile#popup-order-mobile-host
+    +form-order-summary-mobile(true).__form
   +popup-order-summary-g#popup-order-guest
     +form-order-summary.__form
   +popup-order-summary-mobile-g#popup-order-mobile-guest
+    +form-order-summary-mobile.__form
