--- a/app/components/popup-order-summary/popup-order-summary.scss
+++ b/app/components/popup-order-summary/popup-order-summary.scss
@@ -8,31 +8,50 @@
       right: 16px;
       width: 38px;
       height: 38px;
+
+      @include screen('md') {
+        top: 13px;
+        left: 26px;
+        width: 44px;
+        height: 44px;
+      }
+
+      @include screen('sm') {
+        top: 8px;
+        left: 9px;
+        width: 34px;
+        height: 34px;
+      }
     }
 
     &__header {
       padding-top: 50px;
       padding-bottom: 28px;
+
+      @include screen('sm') {
+        padding-top: 12px;
+        padding-bottom: 12px;
+      }
     }
 
     &__content {
       padding: 132px 0 80px;
 
       @include screen('md') {
-        padding: 90px 0 80px;
+        padding: 80px 0;
       }
 
       @include screen('sm') {
-        padding: 70px 0 50px;
+        padding: 50px 0;
       }
     }
   }
 
   &__form {
-    padding: 0 73px 44px 70px;
+    padding: 0 70px 44px;
 
-    @include screen('sm') {
-
+    @include screen('md') {
+      padding: 0;
     }
   }
 }
