--- a/app/pages/deal-passport/deal-passport-state4.pug
+++ b/app/pages/deal-passport/deal-passport-state4.pug
@@ -29,7 +29,7 @@ block content
           +sidebar._dark2(data-unstick-media="md")
             +space-reserv('ARTICLE', {head: {name: 'office space', color: '_green', base: '_black'}, img: 'assets/images/space16.jpg', heart: '', boxes: [{ class: '_orange'}, {class: '_red'}, {class: '_blue'}, {class: '_green'}], title: 'One Heddon Street', location: 'EC2A, London', text: 'Floor 5 Dedicated office space. Room 54'})._dark._side
               +e.informer
-                +status-button({name: 'Order summary', status: true}).__state
+                +status-button({name: 'Order summary', status: true}).__state.js-popup-depends-width(href="#" data-source="xl:#popup-order-host,md:#popup-order-mobile-host")
                   +state()._right._check._light Confirmed
                 +status-button({name: 'Contract', status: true}).__state.js-popup-depends-width(href="#" data-source="xl:#popup-legal-formalities,md:#popup-legal-formalities-m")
                   +state()._right._dcheck._light Signed by both sides
@@ -45,7 +45,7 @@ block content
                 +e.name Status:
                 +e.info
                   +state()._orange._fz18.__state
-                    +link()._underline(href="#") Order summary confirmation
+                    +link()._underline.js-popup-depends-width(href="#" data-source="xl:#popup-order-host,md:#popup-order-mobile-host") Order summary confirmation
                     | &nbsp;required
                   +state()._orange._fz18.__state Please sign
                     +link()._underline.js-popup-depends-width(href="#" data-source="xl:#popup-legal-formalities,md:#popup-legal-formalities-m") the contract
@@ -60,3 +60,7 @@ block popups
     +document-legal
   +popup-document-mobile(getData('contract-status.json'))#popup-legal-formalities-m
   +popup-chat#popup-chat
+  +popup-order-summary#popup-order-host
+    +form-order-summary(true).__form
+  +popup-order-summary-mobile#popup-order-mobile-host
+    +form-order-summary-mobile(true).__form
