--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -382,6 +382,10 @@
     #{$b}__text {
       padding: 2px 10px 3px;
     }
+
+    &#{$b}_fz17 {
+      @include text-mid;
+    }
   }
 
   &_mob-smaller {
