--- a/app/blocks/info-editable/info-editable.scss
+++ b/app/blocks/info-editable/info-editable.scss
@@ -84,8 +84,8 @@
     &_editpd {
       padding-right: 56px;
 
-      @include screen('sm') {
-        padding-right: 28px;
+      @include screen('md') {
+        padding-right: 0;
       }
     }
   }
