--- a/app/components/popup-order-summary/popup-order-summary.pug
+++ b/app/components/popup-order-summary/popup-order-summary.pug
@@ -11,7 +11,7 @@ mixin popup-order-summary()
 
 mixin popup-order-summary-mobile()
   +popup-mobile._white.popup-order-summary__&attributes(attributes)
-    +popup-header.popup__header_white
+    +popup-header.popup__header_white.popup__header_border
       +popup-title Order Summary
     +popup-content
       block
@@ -29,7 +29,7 @@ mixin popup-order-summary-g()
 
 mixin popup-order-summary-mobile-g()
   +popup-mobile._white.popup-order-summary__&attributes(attributes)
-    +popup-header.popup__header_white
+    +popup-header.popup__header_white.popup__header_border
       +popup-title Order Summary
     +popup-content
       block
