--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -56,6 +56,7 @@ include ../blocks/info-slide/info-slide
 include ../blocks/info-tooltip/info-tooltip
 include ../blocks/info/info
 include ../blocks/informer/informer
+include ../blocks/invoice-info/invoice-info
 include ../blocks/link/link
 include ../blocks/lists/lists
 include ../blocks/logo/logo
