--- a/app/pages/deal-passport/deal-passport.pug
+++ b/app/pages/deal-passport/deal-passport.pug
@@ -33,7 +33,7 @@ block content
                   +state()._right._orange._light Please confirm
                 +status-button({name: 'Contract', status: true}).__state.is-disabled.js-popup-depends-width(href="#" data-source="xl:#popup-legal-formalities,md:#popup-legal-formalities-m")
                   +state()._right._light Confirm order summary first
-                +status-button({name: 'Invoices', status: true}).is-disabled.__state
+                +status-button({name: 'Invoices', status: true}).is-disabled.__state.js-popup-depends-width(href="#" data-source="xl:#popup-invoices,md:#popup-invoices-mobile")
                   +state()._right._light N/A
         +content-column-main._no-ptop.hide-md
           +table-head._messages._borders
