--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -60,6 +60,7 @@ block content
         +link.js-popup-depends-width(href="#" data-source="xl:#popup-legal-formalities3,md:#popup-legal-formalities-m3") Popup legal formalities stage 3
         +link.js-popup-depends-width(href="#" data-source="xl:#popup-order-host,md:#popup-order-mobile-host") Popup order summary HOST
         +link.js-popup-depends-width(href="#" data-source="xl:#popup-order-guest,md:#popup-order-mobile-guest") Popup order summary GUEST
+        +link.js-popup-depends-width(href="#" data-source="xl:#popup-invoices,md:#popup-invoices-mobile") Popup invoices
 
 block panels
   +main-menu
@@ -88,3 +89,5 @@ block popups
     +form-order-summary.__form
   +popup-order-summary-mobile-g#popup-order-mobile-guest
     +form-order-summary-mobile.__form
+  +popup-invoices#popup-invoices
+  +popup-invoices-mobile#popup-invoices-mobile
