--- a/app/styles/helpers/_text-styles.scss
+++ b/app/styles/helpers/_text-styles.scss
@@ -126,6 +126,12 @@
   letter-spacing: -.02em;
 }
 
+@mixin text8 {
+  font-size: 8px;
+  line-height: (26 / 8);
+  letter-spacing: -.02em;
+}
+
 @mixin ls {
   letter-spacing: -.02em;
 }
