--- a/app/blocks/popups/popups.scss
+++ b/app/blocks/popups/popups.scss
@@ -33,10 +33,14 @@
   }
 
   &-container_shift {
-    transform: translate3d(100%, 0, 0);
+    @include screen('md') {
+      transform: translate3d(100%, 0, 0);
+    }
 
     &.fancybox-is-open {
-      transform: translate3d(0, 0, 0);
+      @include screen('md') {
+        transform: translate3d(0, 0, 0);
+      }
     }
   }
 }
@@ -108,6 +112,10 @@
 
     &_white {
       background-color: $color-white;
+    }
+
+    &_border {
+      border-bottom: 1px solid $color-border-light;
     }
 
     &_fx {
