--- a/app/blocks/table/table.scss
+++ b/app/blocks/table/table.scss
@@ -11,7 +11,6 @@
   }
 
   tbody {
-    display: block;
     padding: 0;
     margin: 0;
   }
@@ -19,7 +18,6 @@
   tr {
     padding: 0;
     margin: 0;
-    display: block;
     border-bottom: 1px solid $color-border-light;
   }
 
@@ -33,5 +31,74 @@
     &:last-child {
       padding-right: 0;
     }
+  }
+
+  &_simple {
+    @include text16;
+
+    @include screen('sm') {
+      @include text;
+
+      line-height: (26 / 14);
+    }
+
+    thead tr {
+      border-bottom-width: 1px;
+    }
+
+    td {
+      vertical-align: middle;
+    }
+
+    .table {
+
+      &__cell {
+        padding: 8px 0;
+        padding-left: 32px;
+        position: relative;
+        width: 16.7%;
+
+        &:first-child {
+          width: 33.2%;
+          padding-left: 0;
+        }
+
+        &:last-child {
+          text-align: right;
+        }
+
+        &_head {
+          @include text;
+
+          line-height: (26 / 14);
+          font-weight: 400;
+          padding-top: 4px;
+          padding-bottom: 4px;
+
+          @include screen('sm') {
+            @include text12;
+          }
+        }
+
+        &_bold {
+          font-weight: 700;
+        }
+
+        a:not(.button) {
+          transition: color $ease-main;
+
+          &:hover {
+            color: $color-basic-dark;
+          }
+        }
+      }
+
+      &__status {
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+    }
+
   }
 }
