--- a/app/pages/deal-passport/deal-passport-state4.pug
+++ b/app/pages/deal-passport/deal-passport-state4.pug
@@ -33,7 +33,7 @@ block content
                   +state()._right._check._light Confirmed
                 +status-button({name: 'Contract', status: true}).__state.js-popup-depends-width(href="#" data-source="xl:#popup-legal-formalities,md:#popup-legal-formalities-m")
                   +state()._right._dcheck._light Signed by both sides
-                +status-button({name: 'Invoices', status: true}).__state
+                +status-button({name: 'Invoices', status: true}).__state.js-popup-depends-width(href="#" data-source="xl:#popup-invoices,md:#popup-invoices-mobile")
                   +state()._right._orange._light <b>1</b> unpaid invoice
         +content-column-main._no-ptop.hide-md
           +table-head._messages._borders
