--- a/app/pages/deal-passport/deal-passport-state3.pug
+++ b/app/pages/deal-passport/deal-passport-state3.pug
@@ -64,3 +64,5 @@ block popups
     +form-order-summary.__form
   +popup-order-summary-mobile-g#popup-order-mobile-guest
     +form-order-summary-mobile.__form
+  +popup-invoices#popup-invoices
+  +popup-invoices-mobile#popup-invoices-mobile
