--- a/app/pages/deal-passport/deal-passport-state4.pug
+++ b/app/pages/deal-passport/deal-passport-state4.pug
@@ -64,3 +64,5 @@ block popups
     +form-order-summary(true).__form
   +popup-order-summary-mobile#popup-order-mobile-host
     +form-order-summary-mobile(true).__form
+  +popup-invoices#popup-invoices
+  +popup-invoices-mobile#popup-invoices-mobile
